--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,22 +5,4 @@
 @import url('general.css');
 @import url('variables.css');
 @import url('header.css');
-
-
-body{
-    background-color: rgb(255, 255, 255);
-}
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-ul, ol{
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-}
+@import url('footer.css');
