Añade EJS y estilos

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -13,5 +13,11 @@ a {
 }
 
 body {
-    width: 100vh;
+    padding-top: 4rem;
+}
+
+@media (min-width: 992px) {
+    body {
+        padding-top: 6rem;
+    }
 }
