--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,13 +1,14 @@
 /* Header */
 
-header.main_header{
+header.main_header {
     background-color: white;
     height: 4rem;
     display: flex;
     justify-content: space-between;
-    text-align: center;
+    align-items: center;
     width: 100%;
     position: fixed;
+    z-index: 999;
     top: 0;
     left: 0;
     padding: 0.5rem 1rem;
@@ -17,7 +18,7 @@ header.main_header{
 
 /* Header Logo */
 
-header.main_header .header_logo{
+header.main_header .header_logo {
     width: 50px;
 }
 
@@ -25,7 +26,9 @@ header.main_header .header_logo img{
     width: 100%;
 }
 
+
 /* Menu */
+
 header.main_header .header_menuButton button{
     border: none;
     background-color: var(--color-primary);
@@ -36,7 +39,7 @@ header.main_header .header_menuButton button{
     font-size: 1.5rem;
 }
 
-header.main_header .header_menu{
+header.main_header .header_menu {
     position: fixed;
     top: 0;
     left: 0;
@@ -223,15 +226,6 @@ header.main_header .header_menu.active {
 
     header.main_header .header_menu ul.menu_list li a {
         font-size: 1rem;
-    }
-    
-    header.main_header .header_menu .header_avatar {
-        margin-bottom: 0;
-        /* order: 2; */
-    }
-
-    header.main_header .header_menu .header_searchBar {
-      /*  order: 1; */
     }
 
 }
