--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap');
 
+/* Imports */
+
 @import url('general.css');
 @import url('variables.css');
 @import url('header.css');
 @import url('footer.css');
+@import url('home.css');
